Got some basics rolling
- paper with coordinates on death
- custom player join messages
- custom player death messages

--- a/zPlugin/src/main/resources/plugin.yml
+++ b/zPlugin/src/main/resources/plugin.yml
@@ -4,4 +4,4 @@ main: dev.benzobrist.safedeath.SafeDeath
 api-version: 1.16
 authors: [ zobrist ]
 description: Provides events to be handled on death of a player
-website: dev.benzobrist
+website: benzobrist.dev
